bug fixing and refactoring vpl domain elems methods not to be pinned in vpl elems

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,15 @@
     </style>
 </head>
 <body>
+    <div>
+        <input
+            id="btnAddSO"
+            type="button"
+            value='Add SO domain element'
+            style='margin: 15px 15px 15px 15px'
+        />
+    </div>
+
     <div id='blocklyDiv'>
     </div>
 
