auto generate smart object blocks works

--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,23 @@
             value='Add SO domain element'
             style='margin: 15px 15px 15px 15px'
         />
+        <input
+            id="btnAddHomeTask"
+            type="button"
+            value='Add Home Tasks'
+            style='margin: 15px 15px 15px 30px'
+        />
+        <input
+            id="btnAddMorningTask"
+            type="button"
+            value='Add Home Tasks'
+            style='margin: 15px 15px 15px 15px'
+        />
     </div>
-
     <div id='blocklyDiv'>
     </div>
-
+    
     <script type='text/javascript' src='./index.js'></script>
-
 </body>
 
 </html>
