--- a/public/index.html
+++ b/public/index.html
@@ -22,21 +22,41 @@
 <body>
     <div>
         <input
-            id="btnAddSO"
+            id="btnAddSOAirCondition"
             type="button"
-            value='Add SO domain element'
+            value='Add SO Air-Conditioning'
             style='margin: 15px 15px 15px 15px'
         />
         <input
             id="btnAddHomeTask"
             type="button"
-            value='Add Home Tasks'
+            value='Add Tidying Tasks'
             style='margin: 15px 15px 15px 30px'
         />
         <input
-            id="btnAddMorningTask"
+            id="btnAddLeavingTask"
             type="button"
-            value='Add Home Tasks'
+            value='Add Leaving Home Tasks'
+            style='margin: 15px 15px 15px 15px'
+        />
+
+        <!-- remove -->
+        <input
+            id="btnRemoveHomeTask"
+            type="button"
+            value='Remove Tidying Tasks'
+            style='margin: 15px 15px 15px 30px'
+        />
+        <input
+            id="btnRemoveLeavingTask"
+            type="button"
+            value='Remove Leaving Home Tasks'
+            style='margin: 15px 15px 15px 15px'
+        />
+        <input
+            id="btnRemoveSOAirCondition"
+            type="button"
+            value='Remove SO Air-Conditioning'
             style='margin: 15px 15px 15px 15px'
         />
     </div>
