update/edit action of domain elements block action is completed, TODO update and remove blocks in the instances

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,25 @@
             value='Remove SO Air-Conditioning'
             style='margin: 15px 15px 15px 15px'
         />
+        <!-- update -->
+        <input
+            id="btnUpdateLeavingTask"
+            type="button"
+            value="Update Update Leaving Task"
+            style='margin: 15px 15px 15px 15px'
+        />
+        <input
+            id="btnUpdateHomeTask"
+            type="button"
+            value="Update Update Home Task"
+            style='margin: 15px 15px 15px 15px'
+        />
+        <input
+            id="btnUpdateSOAirCondition"
+            type="button"
+            value="Update Update SO Air-Condition"
+            style='margin: 15px 15px 15px 15px'
+        />
     </div>
     <div id='blocklyDiv'>
     </div>
